# sector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow.yaml
changes/: +d3284b4b.doc.md  +efbc94e2.feature.md
src/playground/: get_github_releases.py
src/sector/: cli.py  configuration.py  github.py  logger.py
tests/: test_cli.py  test_github.py  test_meta.py
